--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,10 @@ body.vip-pass {
   height: 50px;
 }
 
+.collapsebg {
+  background:#09070c;
+}
+
 a {
     text-decoration: none!important;
 }
@@ -941,7 +945,7 @@ body.infinityPage {
   padding: 1em 1.2em;
 }
 .shopCard .category {
-  font-size: 0.8em;
+  font-size: 0.6em;
   font-weight: 300;
   color: white;
   margin-bottom: 0.2em;
