Check to make sure user has enough $BREAD to buy, otherwise disable button

--- a/css/style.css
+++ b/css/style.css
@@ -833,6 +833,13 @@ body.infinityPage {
 #mintButton {
 
 }
+  #mintButton.disabled {
+    cursor:not-allowed;
+  }
+    #mintButton.light.disabled:hover {
+      background-color:#faedd7;
+      color:black;
+    }
 
 /* Shop Page */
 #shopSection {
