--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   font-size: 1em;
   /* font-family: "AVENGEANCE-MIGHTIEST-AVENGER"; */
   font-family: "Inter";
-  background-image: url("../img/bg.png");
+  background-image: url("../img/bg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
@@ -26,7 +26,7 @@ body {
   padding-top: 5em;
 }
 body.vip-pass {
-  background-image: url("../img/vipbg.png");
+  background-image: url("../img/vipbg.webp");
   background-size: cover;
   background-position: center;
 }
