--- a/css/style.css
+++ b/css/style.css
@@ -1757,3 +1757,126 @@ video#bgVid {
     margin-right: 4em;
   }
 }
+
+/* User mint */
+.user-mint .mainHeading {
+  text-transform: uppercase;
+  margin: 2em 0 60px;
+}
+
+.user-mint h2 {
+  font-size:24px;
+  line-height:30px;
+  font-weight:bold;
+  color:#fff;
+  margin-bottom:32px;
+}
+
+.user-mint form {
+  display:flex;
+  flex-direction:column;
+  color:#fff;
+}
+
+.user-mint form label.instructions {
+  font-size:12px;
+  line-height:15px;
+  font-weight: 300;
+}
+  .user-mint form label.instructions:first-child {
+    margin-bottom:16px;
+  }
+
+#image-upload {
+  width:100%;
+  height:0;
+  padding-bottom:100%;
+  background: url(/assets/images/pizza-template.jpg);
+  background-size:cover;
+  border: 1px solid #292437;
+  border-radius: 10px;
+  margin:16px 0 32px;
+  position:relative;
+}
+
+#file-input {
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0;
+  left:0;
+}
+  #file-input label {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    width:27%;
+    height:27%;
+    font-size:12px;
+    text-align:center;
+    cursor:pointer;
+    z-index:10;
+    position:relative;
+  }
+    #file-input input {
+      width: 0.1px;
+      height: 0.1px;
+      opacity: 0;
+      overflow: hidden;
+      position: absolute;
+      z-index: -1;
+    }
+    #file-input label strong {
+      display:block;
+      margin-top:15px;
+    }
+      #file-input label:hover strong {
+        text-decoration:underline;
+      }
+    #file-input label:before {
+      display:block;
+      content:"";
+      width:100%;
+      height:100%;
+      opacity: 0.4;
+      border: 2px dashed rgba(255,255,255,0.4);
+      border-radius: 5px;
+      position:absolute;
+      top:50%;
+      left:50%;
+      transform:translateX(-50%) translateY(-50%);
+    }
+  #file-input .upload-arrow {
+    width:30px;
+  }
+
+.form-fields {
+  display:flex;
+  flex-direction:column;
+  row-gap:30px;
+}
+
+  .form-fields select, .form-fields input[type="text"], .form-fields textarea {
+    display:block;
+    width:100%;
+    height:34px;
+    line-height:34px;
+    background: #292437;
+    color: #fff;
+    font-weight:bold;
+    border:none;
+    border-radius: 10px;
+    margin-top:16px;
+    padding:0 16px;
+    outline:none;
+    -webkit-appearance: none;
+            appearance: none;
+  }
+    .form-fields textarea {
+      height:auto;
+    }
