--- a/css/style.css
+++ b/css/style.css
@@ -1791,13 +1791,34 @@ video#bgVid {
   width:100%;
   height:0;
   padding-bottom:100%;
-  background: url(/assets/images/pizza-template.jpg);
-  background-size:cover;
-  border: 1px solid #292437;
   border-radius: 10px;
   margin:16px 0 32px;
   position:relative;
+  overflow:hidden;
 }
+  #pizza-container {
+    width:100%;
+    height:100%;
+    border: 1px solid #292437;
+    position:absolute;
+    top:0;
+    left:0;
+  }
+    #pizza-container img {
+      display:block;
+    }
+      img#pizza-template {
+        position:relative;
+        z-index:5;
+      }
+      img#user-image {
+        width:100%;
+        height:100%;
+        object-fit:cover;
+        position:absolute;
+        top:0;
+        left:0;
+      }
 
 #file-input {
   display:flex;
