More changes to frontend form

--- a/css/style.css
+++ b/css/style.css
@@ -1821,6 +1821,7 @@ video#bgVid {
       }
 
     #pizza-container svg {
+      display:none;
       position:absolute;
       left:0;
       top:0;
