Save pizza creations in a folder named after the user's public wallet address

--- a/css/style.css
+++ b/css/style.css
@@ -1827,6 +1827,9 @@ video#bgVid {
       top:0;
       z-index:10;
     }
+      #pizza-container svg text {
+        text-transform:uppercase;
+      }
 
 #file-input {
   display:flex;
