--- a/css/style.css
+++ b/css/style.css
@@ -1792,7 +1792,7 @@ video#bgVid {
   height:0;
   padding-bottom:100%;
   border-radius: 10px;
-  margin:16px 0 32px;
+  margin-top:16px;
   position:relative;
   overflow:hidden;
 }
@@ -1892,16 +1892,23 @@ video#bgVid {
   flex-direction:column;
   row-gap:30px;
 }
-  .form-fields label.small {
+  #pizza-form label.small {
     display:flex;
     align-items:center;
     margin-top:-25px;
   }
-    .form-fields label.small span {
+    #pizza-form label.small span {
       display:inline-block;
       margin-left:5px;
     }
-  .form-fields select, .form-fields input[type="text"], .form-fields textarea {
+  #pizza-form label.error {
+    align-self:flex-start;
+    margin-top:.5rem;
+    color:red;
+    border:1px solid red;
+    padding:0 5px;
+  }
+  #pizza-form select, #pizza-form input[type="text"], #pizza-form textarea {
     display:block;
     width:100%;
     height:34px;
@@ -1917,11 +1924,21 @@ video#bgVid {
     -webkit-appearance: none;
             appearance: none;
   }
-    .form-fields textarea {
+    #pizza-form textarea {
       height:auto;
     }
-    .form-fields select {
+    #pizza-form select {
       background-image:url(/img/dropdown-arrow.svg);
       background-repeat:no-repeat;
       background-position:calc(100% - 15px) center;
     }
+    #pizza-form select.error, #pizza-form input[type="text"].error, #pizza-form textarea.error {
+      border:1px solid red;
+    }
+
+#pizza-comp {
+  width:1000px;
+  height:1000px;
+  position:absolute;
+  right:200%;
+}
