--- a/css/custom-pizza.css
+++ b/css/custom-pizza.css
@@ -22,6 +22,7 @@
     display:flex;
     flex-direction:column;
     color:#fff;
+    margin-bottom:50px;
 }
 
     .custom-pizza-form form label.instructions {
@@ -168,6 +169,10 @@
             padding:0 5px;
         }
 
+        #pizza-form label.submit-label {
+            text-align:center;
+        }
+
         #pizza-form select, #pizza-form input[type="text"], #pizza-form textarea {
             display:block;
             width:100%;
@@ -198,6 +203,10 @@
             #pizza-form select.error, #pizza-form input[type="text"].error, #pizza-form textarea.error {
                 border:1px solid red;
             }
+        #pizza-form input[type="submit"] {
+            max-width:135px;
+            margin-top:0;
+        }
 
 #pizza-comp {
     width:1000px;
