--- a/css/community-pizza.css
+++ b/css/community-pizza.css
@@ -222,7 +222,7 @@
             text-align:center;
         }
 
-        #pizza-form select, #pizza-form input[type="text"], #pizza-form textarea {
+        #pizza-form .select2-container, #pizza-form input[type="text"], #pizza-form textarea {
             display:block;
             width:100%;
             height:34px;
@@ -256,6 +256,73 @@
             max-width:145px;
             margin-top:0;
         }
+
+        /* Select 2 overrides */
+        .select2-container--default .select2-selection--single {
+            background:none;
+            border:none;
+            border-radius:0;
+        }
+        .select2-container .select2-selection--single {
+            height:34px;
+        }
+            .select2-container .select2-selection--single .select2-selection__rendered {
+                padding:0;
+                line-height:34px;
+            }
+            .select2-container--default .select2-selection--single .select2-selection__rendered {
+                color:#fff;
+            }
+        .select2-container--default .select2-selection--single .select2-selection__arrow {
+            height:34px;
+            width:14px;
+        }
+            .select2-container--default .select2-selection--single .select2-selection__arrow b {
+                width:14px;
+                height:7px;
+                border:none;
+                background-image:url(/img/dropdown-arrow.svg);
+                background-size: cover;
+                background-repeat: no-repeat;
+                margin: 0;
+                left: initial;
+                right:16px;
+                transform: translateY(-50%);
+                transform-origin: top;
+                transition:.3s all ease-in-out;
+            }
+                .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
+                    transform: rotate(-90deg) translateY(-50%);
+                }
+
+        .select2-dropdown {
+            background:none;
+            border:none;
+        }
+        .select2-results {
+            background:#292437;
+            border-radius: 10px;
+            overflow:hidden;
+            margin-top:5px;
+        }
+        .select2-results__option {
+            display:flex;
+            width:100%;
+            justify-content:space-between;
+            align-items:center;
+            min-height:48px;
+            color:#fff;
+            padding:8px 16px;
+        }
+            .select2-results__option img {
+                width:32px;
+            }
+            .select2-container--default .select2-results__option--disabled {
+                display:none;
+            }
+            .select2-container--default .select2-results__option--highlighted.select2-results__option--selectable, .select2-container--default .select2-results__option--selected {
+                background:#110F17;
+            }
 
 #pizza-comp {
     width:1000px;
