--- a/css/community-pizza.css
+++ b/css/community-pizza.css
@@ -547,6 +547,9 @@ section[data-step="2"] .token-preview {
 #pizza-oven {
     color:#fff;
 }
+#mint-header .mainHeading {
+    margin-top:2em;
+}
 .pizza-oven-headings > *, .pizza-item-container > * {
     display:flex;
     width:calc(65% / 4);
@@ -570,6 +573,27 @@ section[data-step="2"] .token-preview {
         width:35%;
     }
 }
+
+/* Filtering */
+.creator-filter {
+    display:flex;
+    column-gap:30px;
+    padding:30px 0;
+}
+    .creator-filter a {
+        font-size:24px;
+        color: #ADA9B1;
+        line-height: 29px;
+        font-weight: 700;
+    }
+        .creator-filter a.active {
+            color:#FAEDD7;
+        }
+        .creator-filter a[data-creator="user"] {
+            display:none;
+        }
+
+/* Pizza Table */
 .pizza-oven-headings {
     display:flex;
     width:100%;
