--- a/css/community-pizza.css
+++ b/css/community-pizza.css
@@ -62,12 +62,13 @@
                     z-index:5;
                 }
                 img#user-image {
-                    width:100%;
-                    height:100%;
-                    object-fit:cover;
-                    position:absolute;
-                    top:0;
-                    left:0;
+                    width: 48.5%;
+                    height: 48.5%;
+                    object-fit: cover;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translateX(-50%) translateY(-50%);
                 }
 
             #pizza-container svg {
